--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,28 +30,35 @@ jobs:
       #   with:
       #     githubToken: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build
-      - name: Build project
-        uses: game-ci/unity-builder@v2
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          targetPlatform: StandaloneWindows64
+      # # Build
+      # - name: Build project
+      #   uses: game-ci/unity-builder@v2
+      #   env:
+      #     UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      #     UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+      #     UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+      #   with:
+      #     targetPlatform: StandaloneWindows64
 
       # Output
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Build
-          path: build
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Build
+      #     path: build
 
-      - name: Build info
-        run: echo ${{ github.sha }} > Build.zip
-      - name: Test
-        run: cat Build.zip
+      # - name: Build info
+      #   run: echo ${{ github.sha }} > Build.zip
+      # - name: Test
+      #   run: cat Build.zip
+
+      - name: Generate release tag
+        id: tag
+        run: |
+          echo "::set-output name=release_tag::UserBuild_$(date +"%Y.%m.%d_%H-%M")"
+
       - name: Release
         uses: softprops/action-gh-release@v1
         # if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Build.zip
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          files: README.md
