--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,12 @@ jobs:
         with:
           targetPlatform: StandaloneWindows64
 
-      # # Compress folder
-      # - name: Compress build folder
-      #   uses: vimtor/action-zip@v1
-      #   with:
-      #     files: build
-      #     dest: Build.zip
+      # Compress folder
+      - name: Compress build folder
+        uses: vimtor/action-zip@v1
+        with:
+          files: build
+          dest: Build.zip
 
       # - name: Build info
       #   run: echo ${{ github.sha }} > Build.zip
@@ -49,13 +49,20 @@ jobs:
         run: |
           ls -ahl
 
-      # - name: Generate release tag
-      #   id: tag
-      #   run: |
-      #     echo "::set-output name=release_tag::Version_$(date +"%Y.%m.%d_%H-%M")"
+      - name: Generate release tag
+        id: tag
+        run: |
+          echo "::set-output name=release_tag::Version_$(date +"%Y.%m.%d_%H-%M")"
 
-      # - name: Release
-      #   uses: softprops/action-gh-release@v1
-      #   with:
-      #     tag_name: ${{ steps.tag.outputs.release_tag }}
-      #     files: Build.zip
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          files: Build.zip
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: |
+            Build.zip
+            build
