--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Actions 😎
 
-on: [push, workflow_dispatch]
-
+on: 
+  push:
+    branches: main
 jobs:
   build:
     name: Build my project ✨
